@@ -1,3 +1,9 @@
+1999-05-07  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
+
+        Avoid a "make check" failure with "cc" on DEC OSF/1 4.0.
+        * test2.c (barrier): New function.
+          (main): Call it at the right moment.
+
 1999-05-02  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>
 
         Support for catching stack overflow on Unix, using sigaltstack().
